fixed image not showing AGAIN

--- a/www/slide/standardStyling.css
+++ b/www/slide/standardStyling.css
@@ -359,7 +359,7 @@
 */
 
 .item--big-container {
-  height: fit-content;
+  height: 100%;
   width: 100%;
   display: flex;
   gap: 2rem;
